fix: display contacts on mobile

--- a/public/css/home/custom.css
+++ b/public/css/home/custom.css
@@ -41,9 +41,22 @@ a.header-logo {
     color: white;
     font-size: 1.6em !important;
 }
+.nav.navbar-nav li.mobile-phone {
+    display: none !important;
+}
+.nav.navbar-nav li.mobile-phone-icons {
+    display: none !important;
+}
 @media only screen and (max-width: 991px) {
     .nav.navbar-nav a.btn {
         margin: 1.5rem 0;
+    }
+    .nav.navbar-nav li.mobile-phone {
+        display: flex !important;
+    }
+    .nav.navbar-nav li.mobile-phone-icons {
+        display: flex !important;
+        font-size: 1.7rem;
     }
 }
 
